finished the project but there's a lot of bugs which I'm going to fix later

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 }
 
 body {
-  background: #8758ff;
+  background: linear-gradient(89deg, rgba(84,106,123,1) 0%, rgba(98,146,158,1) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .App {
@@ -25,7 +26,7 @@ h1 {
 }
 
 .todo-wrapper {
-  background: #1A1A40;
+  background: #393d3f;
   margin-top: 5rem;
   padding: 2rem;
   border-radius: 5px;
@@ -39,7 +40,7 @@ h1 {
 .todo-input {
   outline: none;
   background: none;
-  border: 1px solid #8758ff;
+  border: 1px solid #62929e;
   padding: 0.5rem 1rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
@@ -48,26 +49,30 @@ h1 {
 }
 
 .todo-input::placeholder {
-  color: #ffffff4d;
+  color: #ffffffa1;
 }
 
 .todo-btn {
-  background: #8758ff;
+  background: #62929e;
   color: #fff;
   border: none;
   padding: 0.55rem;
   cursor: pointer;
 }
 
-.Todo {
+.todo {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #8758ff;
+  background: #62929e;
   color: #fff;
   padding: 0.75rem 1rem;
   border-radius: 5px;
   margin-bottom: 1rem;
+}
+
+.todo p {
+  cursor: pointer;
 }
 
 .fa-trash {
@@ -80,7 +85,7 @@ h1 {
 }
 
 .completed {
-  color: #c5aeff;
+  color: #ffffffa1;
   text-decoration: line-through;
   cursor: pointer;
 }
@@ -88,4 +93,8 @@ h1 {
 .edit-icon,
 .delete-icon {
   cursor: pointer;
+}
+
+.edit-icon {
+  padding-left: 10px;
 }
