--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ body {
   align-items: center;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .App {
   text-align: center;
 }
@@ -27,6 +31,7 @@ h1 {
 .todo-wrapper {
   background: #393d3f;
   margin-top: 5rem;
+  margin-bottom: 5rem;
   padding: 2rem;
   border-radius: 5px;
 }
