--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,11 @@ header {
 h1 {
   color: #fff;
   margin-bottom: 0.5rem;
-  font-size: 1.75rem;
+  font-size: 2rem;
+}
+
+.current-time {
+  font-size: 1rem;
 }
 
 .current-time {
