--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;500&display=swap');
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Red Hat Display", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -33,6 +33,7 @@ h1 {
   color: #fff;
   margin-bottom: 0.5rem;
   font-size: 2rem;
+  font-weight: 900;
 }
 
 .current-time {
