--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 body::-webkit-scrollbar {
@@ -132,8 +133,9 @@ h1 {
   padding-left: 10px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .todo-wrapper {
-    margin: 5rem 5rem 5rem 5rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
   }
 }
